# tree-display-rs

./: .gitignore  Cargo.toml  reset_tests.sh
tests/: Cargo.toml
tests/data/all_inclusive/: all_inclusive1.txt  all_inclusive1_dense.txt  all_inclusive1_dense_typed.txt  all_inclusive1_typed.txt  test.txt
tests/data/complex/: complex_1_dense.txt  complex_1_dense_typed.txt  complex_1_typed.txt
tests/data/enum/: enum_named_fields_dense_typed.txt  enum_named_fields_typed.txt  enum_nested_struct.txt  enum_nested_struct_dense.txt  enum_nested_struct_dense_typed.txt  enum_nested_struct_typed.txt  enum_tuple_prim.txt  enum_tuple_prim_dense.txt  enum_unit_dense.txt  enum_unit_typed.txt
tests/data/option/: option_enum.txt  option_enum_dense.txt  option_enum_dense_typed.txt  option_enum_typed.txt  option_none_dense.txt  option_prim.txt  option_prim_dense.txt  option_prim_typed.txt  option_struct.txt  option_struct_dense.txt  option_struct_dense_typed.txt  option_struct_typed.txt  option_vec.txt  option_vec_dense.txt  option_vec_dense_typed.txt  option_vec_none.txt  option_vec_none_typed.txt  option_vec_typed.txt
tests/data/result/: result_err.txt  result_err_dense_typed.txt  result_err_enum.txt  result_err_enum_dense.txt  result_err_enum_dense_typed.txt  result_err_enum_typed.txt  result_err_struct.txt  result_err_struct_dense.txt  result_err_struct_dense_typed.txt  result_err_struct_typed.txt  result_err_vec.txt  result_ok.txt  (+16 more)
tests/src/: lib.rs
tree-display/: Cargo.toml
tree-display-macros/: Cargo.toml
tree-display-macros/src/: lib.rs
tree-display/src/: lib.rs
(+36 files in other folders)
