[package]
name = "tree-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-display-macros = { path = "../tree-display-macros" }

[dev-dependencies]
diff_assert = { git = "https://github.com/anixe/diff-assert" }